Created Plan Trip Form

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -11,7 +11,7 @@ body {
 }
 
 header {
-    background-color: #d1c4f4;
+    /* background-color: #d1c4f4; */
     color: #591c75;
     padding: 10px 90px;
     height: 70px;
